generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

// =============================================
// PARTITURAS Y REPERTORIOS
// =============================================

model Score {
  id           Int       @id @default(autoincrement())
  title        String
  fileUrl      String
  createdAt    DateTime  @default(now())
  isDocument   Boolean   @default(false)
  categoryId   Int?
  category     Category? @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  allowedAgrupaciones String[] @default([])
  // Ahora es una lista preestablecida de cadenas (Secciones)
  allowedRoles String[]  @default([])
}

model Category {
  id        Int       @id @default(autoincrement())
  name      String    @unique
  eventDate DateTime?
  scores    Score[]
  events    Event[]
}

// =============================================
// TABLA DE SECCIONES (Estructuras Artísticas)
// =============================================

model Seccion {
  id               Int          @id @default(autoincrement())
  seccion          String       @unique
  familia          String       @default("Otros")
  isVisibleInPublic Boolean     @default(true)
  estructuras      Estructura[]
}

model SystemConfig {
  key   String @id
  value Json
}

// =============================================
// ESQUEMA NORMALIZADO - Paridad con Supabase
// =============================================

model User {
  id            Int          @id @default(autoincrement())
  supabaseUserId String?      @unique
  name          String
  surname       String
  dni           String       @unique
  email         String?      @unique
  username      String?      @unique
  phone         String?
  birthDate      String?
  hasCertificate Boolean      @default(false)
  createdAt      DateTime     @default(now())
  updatedAt     DateTime     @updatedAt

  residenciaId  Int?
  residencia    Residencia?  @relation(fields: [residenciaId], references: [id])
  empleoId      Int?
  empleo        Empleo?      @relation(fields: [empleoId], references: [id])

  isActive      Boolean      @default(true)
  isExternal    Boolean      @default(false)
  isMaster      Boolean      @default(false)
  isArchiver    Boolean      @default(false)
  isSeller      Boolean      @default(false)
  isSectionLeader Boolean    @default(false)
  estructuras   Estructura[]
  matriculas    Matricula[]
}

model Estructura {
  id               Int                  @id @default(autoincrement())
  userId           Int
  user             User                 @relation(fields: [userId], references: [id], onDelete: Cascade)
  papelId          Int
  papel                Papel                @relation(fields: [papelId], references: [id])
  agrupacionId     Int
  agrupacion       Agrupacion           @relation(fields: [agrupacionId], references: [id])
  seccionId        Int
  seccion          Seccion              @relation(fields: [seccionId], references: [id])
  activo           Boolean              @default(false)
  atril            Int?
  programaAnterior Boolean              @default(false)

  @@unique([userId, papelId, agrupacionId, seccionId])
}

model Residencia {
  id              Int     @id @default(autoincrement())
  isla            String?
  municipio       String?
  empadronamiento String?
  users           User[]

  @@unique([isla, municipio, empadronamiento])
}

model Empleo {
  id       Int     @id @default(autoincrement())
  trabajo  String?
  estudios String?
  users    User[]

  @@unique([trabajo, estudios])
}

model Matricula {
  id              Int    @id @default(autoincrement())
  matriculaNumber String @unique
  userId          Int
  user            User   @relation(fields: [userId], references: [id], onDelete: Cascade)
}

// =============================================
// CATÁLOGOS (pre-llenados)
// =============================================

model Agrupacion {
  id               Int          @id @default(autoincrement())
  agrupacion       String       @unique
  isVisibleInPublic Boolean     @default(true)
  estructuras      Estructura[]
}

model Papel {
  id               Int          @id @default(autoincrement())
  papel            String       @unique
  isVisibleInPublic Boolean     @default(true)
  isDirector       Boolean      @default(false)
  estructuras      Estructura[]
}

model InvitationCode {
  id               Int       @id @default(autoincrement())
  code             String    @unique
  name             String?
  surname          String?
  sentToEmail      String?   // Email al que se envió (Invitaciones Mejoradas)
  expiresAt        DateTime
  usedAt           DateTime?
  agrupacion       String?
  seccion          String?
  agrupacion2      String?
  seccion2         String?
  agrupacion3      String?
  seccion3         String?
  phone            String?
  birthDate        String?
  isla             String?
  hasCertificate   Boolean   @default(false)
  registeredUserId Int?      // ID del usuario que aceptó (Tracking)
  createdAt        DateTime  @default(now())
}

enum EventType {
  Ensayo
  Concierto
}

model Event {
  id          Int       @id @default(autoincrement())
  title       String
  date        DateTime
  location    String?
  description String?
  type        EventType @default(Ensayo)
  categoryId  Int?
  category    Category? @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  createdAt   DateTime  @default(now())

  @@index([date])
  @@index([type, date])
  @@index([categoryId])
}

model ActivityLog {
  id          Int      @id @default(autoincrement())
  action      String   // Qué se hizo (ej: "Usuario Baneado", "Partitura Subida")
  details     Json?    // Detalles adicionales en formato JSON estructurado
  userAuthId  String?  // Quién hizo la acción (Admin)
  createdAt   DateTime @default(now())

  @@index([createdAt])
  @@index([userAuthId])
}

model JoinRequest {
  id             Int      @id @default(autoincrement())
  name           String
  surname        String?
  email          String
  phone          String
  group          String   // Agrupación (Orquesta, Coro, etc.)
  instrument     String?
  experience     String?  @db.Text
  birthDate      String?
  isla           String?
  hasCertificate Boolean  @default(false)
  status         String   @default("Pendiente") // Pendiente, Aceptado, Rechazado
  createdAt      DateTime @default(now())

  @@index([email])
}
